# docker-auto-labels

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.md  README.rst  pyproject.toml  requirements-tests.txt  setup.cfg  setup.py  test-docker-stack.yml  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
.github/workflows/: latest-changes.yml  publish.yml  test.yml
docker_auto_labels/: __init__.py  cli.py  docker_auto_labels.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/docker_auto_labels/: cli.py  docker_auto_labels.py
tests/: __init__.py  test_docker_auto_labels.py  xtest_docker_auto_labels.py
